--- a/website/static/ssoggycat/shared/web/main.css
+++ b/website/static/ssoggycat/shared/web/main.css
@@ -3,7 +3,7 @@
 }
 
 html, body {
-	overflow:hidden;
+	overflow: hidden;
 	overscroll-behavior: none;
 
 	height: 100%;
@@ -47,4 +47,31 @@ body {
 	height: auto;
 	max-width: 75vw;
 	max-height: 75vh;
+}
+
+.entercode {
+	position: fixed;
+	top: 20px; left: 0;
+	width: 100%; height: 20px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	z-index: 10000;
+	pointer-events: auto;
+}
+.entercodehidden {display: none}
+
+.entercodecontent {
+	background-color: white;
+	border-radius: 10em; padding: 0.5em;
+	max-width: 50px; height: 100%;
+	display: flex;
+	align-items: center;
+}
+.entercodecontent input {
+	border: none; outline: none;
+	font-size: 1em;
+	font-family: 'Spline Sans Mono', monospace;
+	width: 100%; text-align: center;
+	background: transparent;
 }
